Feat: Introduced the download class

--- a/Sources/Views/PlayerView.xib
+++ b/Sources/Views/PlayerView.xib
@@ -218,7 +218,7 @@
                                         <constraint firstAttribute="width" constant="34" id="aPW-r8-3zX"/>
                                     </constraints>
                                 </imageView>
-                                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="yK5-qT-Fdt">
+                                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="yK5-qT-Fdt">
                                     <rect key="frame" x="32" y="0.0" width="303.66666666666669" height="35"/>
                                     <connections>
                                         <action selector="handleVolumeChanges:" destination="0LY-vd-FWp" eventType="valueChanged" id="zmP-bJ-U95"/>
