--- a/Sources/Base.lproj/LaunchScreen.storyboard
+++ b/Sources/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,21 +15,29 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="vQ0-eJ-mB9">
-                                <rect key="frame" x="107" y="272" width="200" height="200"/>
+                                <rect key="frame" x="62.666666666666657" y="187" width="242.99999999999997" height="243"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="cRQ-Xu-73a"/>
-                                    <constraint firstAttribute="height" constant="200" id="zMU-Kl-zqS"/>
+                                    <constraint firstAttribute="width" constant="243" id="cRQ-Xu-73a"/>
+                                    <constraint firstAttribute="height" constant="243" id="zMU-Kl-zqS"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MeyerCast" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="epg-lE-IyS">
+                                <rect key="frame" x="90" y="413.66666666666669" width="188" height="46"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="38"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="vQ0-eJ-mB9" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-76" id="HNf-N6-77z"/>
-                            <constraint firstItem="vQ0-eJ-mB9" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="NqV-5X-1Zz"/>
+                            <constraint firstItem="vQ0-eJ-mB9" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-97.5" id="HNf-N6-77z"/>
+                            <constraint firstItem="epg-lE-IyS" firstAttribute="bottom" secondItem="vQ0-eJ-mB9" secondAttribute="bottom" constant="29.5" id="KkR-AO-Kfc"/>
+                            <constraint firstItem="vQ0-eJ-mB9" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" constant="-3.5" id="NqV-5X-1Zz"/>
+                            <constraint firstItem="epg-lE-IyS" firstAttribute="centerX" secondItem="vQ0-eJ-mB9" secondAttribute="centerX" id="cbB-VF-Ctw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
